# token-mcp

./: Cargo.toml  README.md  config.toml
abi/: IUniswapV2Factory.json  IUniswapV2Pair.json
src/: config.rs  main.rs  request.rs  service.rs  util.rs
