[package]
name = "token-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros"] }
bigint = "4.4.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"
reqwest = { version = "0.12.24", features = ["json"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main",  features = ["server", "transport-sse-server", "transport-io"] }
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
web3-unit-converter = "0.1.1"
